[gd_scene load_steps=8 format=3 uid="uid://dk23vkf8vtnli"]

[ext_resource type="Script" uid="uid://m4bsbsubg7iy" path="res://scripts/app.gd" id="1_0wu41"]
[ext_resource type="Shader" uid="uid://4shutw5u745f" path="res://scripts/better shader.gdshader" id="2_awiwq"]
[ext_resource type="StyleBox" uid="uid://bid4da0a1s6wl" path="res://tres/Button style up.tres" id="2_dmsei"]
[ext_resource type="Script" uid="uid://ckvpvsfppuvl7" path="res://scripts/brainrotWords.gd" id="2_k6d74"]
[ext_resource type="StyleBox" uid="uid://b62gyhl44h0ks" path="res://tres/Button style.tres" id="3_cl6f3"]
[ext_resource type="Texture2D" uid="uid://12flds17r3h2" path="res://assets/betterbulb.png" id="3_k6d74"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ljqyw"]
shader = ExtResource("2_awiwq")
shader_parameter/scroll_speed = 0.05
shader_parameter/direction_change_speed = 0.5

[node name="App" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0wu41")

[node name="infoLord" type="Node2D" parent="."]
script = ExtResource("2_k6d74")

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0.0980392, 0.392157, 0.494118, 1)

[node name="TextureRect" type="TextureRect" parent="."]
texture_repeat = 2
material = SubResource("ShaderMaterial_ljqyw")
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("3_k6d74")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
offset_top = 100.0
offset_right = 1920.0
offset_bottom = 971.0

[node name="Sigmabox" type="VBoxContainer" parent="."]
layout_mode = 2
offset_left = 500.0
offset_top = 100.0
offset_right = 1420.0
offset_bottom = 971.0
theme_override_constants/separation = 200

[node name="easy" type="Button" parent="Sigmabox"]
custom_minimum_size = Vector2(920, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_hover_pressed_color = Color(0.215686, 0.223529, 0.180392, 1)
theme_override_colors/font_hover_color = Color(0.458481, 0.471985, 0.398646, 1)
theme_override_colors/font_color = Color(0.215686, 0.223529, 0.180392, 1)
theme_override_colors/font_focus_color = Color(0.215686, 0.223529, 0.180392, 1)
theme_override_colors/font_pressed_color = Color(0.215686, 0.223529, 0.180392, 1)
theme_override_font_sizes/font_size = 100
theme_override_styles/focus = ExtResource("2_dmsei")
theme_override_styles/hover = ExtResource("2_dmsei")
theme_override_styles/pressed = ExtResource("3_cl6f3")
theme_override_styles/normal = ExtResource("2_dmsei")
text = "Easy"

[node name="medium" type="Button" parent="Sigmabox"]
custom_minimum_size = Vector2(920, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_hover_pressed_color = Color(0.215686, 0.223529, 0.180392, 1)
theme_override_colors/font_hover_color = Color(0.458481, 0.471985, 0.398646, 1)
theme_override_colors/font_color = Color(0.215686, 0.223529, 0.180392, 1)
theme_override_colors/font_focus_color = Color(0.215686, 0.223529, 0.180392, 1)
theme_override_colors/font_pressed_color = Color(0.215686, 0.223529, 0.180392, 1)
theme_override_font_sizes/font_size = 100
theme_override_styles/focus = ExtResource("2_dmsei")
theme_override_styles/hover = ExtResource("2_dmsei")
theme_override_styles/pressed = ExtResource("3_cl6f3")
theme_override_styles/normal = ExtResource("2_dmsei")
text = "Medium"

[node name="hard" type="Button" parent="Sigmabox"]
custom_minimum_size = Vector2(920, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_hover_pressed_color = Color(0.215686, 0.223529, 0.180392, 1)
theme_override_colors/font_hover_color = Color(0.458481, 0.471985, 0.398646, 1)
theme_override_colors/font_color = Color(0.215686, 0.223529, 0.180392, 1)
theme_override_colors/font_focus_color = Color(0.215686, 0.223529, 0.180392, 1)
theme_override_colors/font_pressed_color = Color(0.215686, 0.223529, 0.180392, 1)
theme_override_font_sizes/font_size = 100
theme_override_styles/focus = ExtResource("2_dmsei")
theme_override_styles/hover = ExtResource("2_dmsei")
theme_override_styles/pressed = ExtResource("3_cl6f3")
theme_override_styles/normal = ExtResource("2_dmsei")
text = "Hard"

[node name="Control" type="Control" parent="."]
layout_mode = 2
anchors_preset = 0
offset_left = 960.0
offset_top = 517.0
offset_right = 960.0
offset_bottom = 517.0

[node name="VBoxContainer2" type="VBoxContainer" parent="Control"]
layout_mode = 2
offset_left = -460.0
offset_top = -417.0
offset_right = 460.0
offset_bottom = 454.0
theme_override_constants/separation = 200

[node name="Option 1" type="Button" parent="Control/VBoxContainer2"]
custom_minimum_size = Vector2(920, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_hover_pressed_color = Color(0.215686, 0.223529, 0.180392, 1)
theme_override_colors/font_hover_color = Color(0.458481, 0.471985, 0.398646, 1)
theme_override_colors/font_color = Color(0.215686, 0.223529, 0.180392, 1)
theme_override_colors/font_focus_color = Color(0.215686, 0.223529, 0.180392, 1)
theme_override_colors/font_pressed_color = Color(0.215686, 0.223529, 0.180392, 1)
theme_override_font_sizes/font_size = 100
theme_override_styles/focus = ExtResource("2_dmsei")
theme_override_styles/hover = ExtResource("2_dmsei")
theme_override_styles/pressed = ExtResource("3_cl6f3")
theme_override_styles/normal = ExtResource("2_dmsei")
text = "Quiz"

[node name="Option 2" type="Button" parent="Control/VBoxContainer2"]
custom_minimum_size = Vector2(920, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_hover_pressed_color = Color(0.215686, 0.223529, 0.180392, 1)
theme_override_colors/font_hover_color = Color(0.458481, 0.471985, 0.398646, 1)
theme_override_colors/font_color = Color(0.215686, 0.223529, 0.180392, 1)
theme_override_colors/font_focus_color = Color(0.215686, 0.223529, 0.180392, 1)
theme_override_colors/font_pressed_color = Color(0.215686, 0.223529, 0.180392, 1)
theme_override_font_sizes/font_size = 100
theme_override_styles/focus = ExtResource("2_dmsei")
theme_override_styles/hover = ExtResource("2_dmsei")
theme_override_styles/pressed = ExtResource("3_cl6f3")
theme_override_styles/normal = ExtResource("2_dmsei")
text = "Flashcards"

[node name="Option 3" type="Button" parent="Control/VBoxContainer2"]
custom_minimum_size = Vector2(920, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_hover_pressed_color = Color(0.215686, 0.223529, 0.180392, 1)
theme_override_colors/font_hover_color = Color(0.458481, 0.471985, 0.398646, 1)
theme_override_colors/font_color = Color(0.215686, 0.223529, 0.180392, 1)
theme_override_colors/font_focus_color = Color(0.215686, 0.223529, 0.180392, 1)
theme_override_colors/font_pressed_color = Color(0.215686, 0.223529, 0.180392, 1)
theme_override_font_sizes/font_size = 100
theme_override_styles/focus = ExtResource("2_dmsei")
theme_override_styles/hover = ExtResource("2_dmsei")
theme_override_styles/pressed = ExtResource("3_cl6f3")
theme_override_styles/normal = ExtResource("2_dmsei")
text = "RizzCards(demo)"

[node name="Back" type="Button" parent="."]
layout_mode = 0
offset_left = 18.0
offset_top = 15.0
offset_right = 259.0
offset_bottom = 172.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_hover_pressed_color = Color(0.215686, 0.223529, 0.180392, 1)
theme_override_colors/font_hover_color = Color(0.458481, 0.471985, 0.398646, 1)
theme_override_colors/font_color = Color(0.215686, 0.223529, 0.180392, 1)
theme_override_colors/font_focus_color = Color(0.215686, 0.223529, 0.180392, 1)
theme_override_colors/font_pressed_color = Color(0.215686, 0.223529, 0.180392, 1)
theme_override_font_sizes/font_size = 100
theme_override_styles/focus = ExtResource("2_dmsei")
theme_override_styles/hover = ExtResource("2_dmsei")
theme_override_styles/pressed = ExtResource("3_cl6f3")
theme_override_styles/normal = ExtResource("2_dmsei")
text = "Back"

[connection signal="pressed" from="Sigmabox/easy" to="." method="_on_easy_pressed"]
[connection signal="pressed" from="Sigmabox/medium" to="." method="_on_medium_pressed"]
[connection signal="pressed" from="Sigmabox/hard" to="." method="_on_hard_pressed"]
[connection signal="pressed" from="Control/VBoxContainer2/Option 1" to="." method="_on_option_1_pressed"]
[connection signal="pressed" from="Control/VBoxContainer2/Option 2" to="." method="_on_option_2_pressed"]
[connection signal="pressed" from="Control/VBoxContainer2/Option 3" to="." method="_on_option_3_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
